docs/api/qiskit/1.4/qiskit.providers.models.Nduv.mdx
---
title: Nduv (v1.4)
description: API reference for qiskit.providers.models.Nduv in qiskit v1.4
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.Nduv
---

# Nduv

<Class id="qiskit.providers.models.Nduv" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/providers/models/backendproperties.py#L27-L95" signature="qiskit.providers.models.Nduv(date, name, unit, value)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.14)")

  Class representing name-date-unit-value

  ### date

  <Attribute id="qiskit.providers.models.Nduv.date">
    date.
  </Attribute>

  ### name

  <Attribute id="qiskit.providers.models.Nduv.name">
    name.
  </Attribute>

  ### unit

  <Attribute id="qiskit.providers.models.Nduv.unit">
    unit.
  </Attribute>

  ### value

  <Attribute id="qiskit.providers.models.Nduv.value">
    value.
  </Attribute>

  Initialize a new name-date-unit-value object

  <Admonition title="Deprecated since version 1.4" type="danger">
    The class `qiskit.providers.models.backendproperties.Nduv` is deprecated as of qiskit 1.4. It will be removed in the 2.0 release. The models in `qiskit.providers.models` and related objects are part of the deprecated BackendV1 workflow, and no longer necessary for BackendV2. If a user workflow requires these representations it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  **Parameters**

  *   **date** ([*datetime.datetime*](https://docs.python.org/3/library/datetime.html#datetime.datetime "(in Python v3.14)")) – Date field
  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)")) – Name field
  *   **unit** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.14)")) – Nduv unit
  *   **value** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.14)")) – The value of the Nduv

  ## Methods

  ### from\_dict

  <Function id="qiskit.providers.models.Nduv.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/providers/models/backendproperties.py#L60-L72" signature="from_dict(data)" modifiers="classmethod">
    Create a new Nduv object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.14)")) – A dictionary representing the Nduv to create. It will be in the same format as output by [`to_dict()`](#qiskit.providers.models.Nduv.to_dict "qiskit.providers.models.Nduv.to_dict").

    **Returns**

    The Nduv from the input dictionary.

    **Return type**

    [Nduv](#qiskit.providers.models.Nduv "qiskit.providers.models.Nduv")
  </Function>

  ### to\_dict

  <Function id="qiskit.providers.models.Nduv.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/providers/models/backendproperties.py#L74-L86" signature="to_dict()">
    Return a dictionary format representation of the object.

    **Returns**

    The dictionary form of the Nduv.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.14)")
  </Function>
</Class>

